<resources>
    <string name="app_name">Cuidar dEla</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_profile">Perfil</string>
    <string name="profile_edit">Editar Perfil</string>
    <string name="menu_reminders">Lembretes</string>
    <string name="menu_medicine">Medicamentos</string>
    <string name="menu_care">Cuidados preventivos</string>
    <string name="menu_pathology">Orientações patologia</string>
    <string name="menu_nurcing">Orientações enfermagem</string>
    <string name="menu_about">Sobre</string>
    <string name="screen_add_medicine">Adicionar Medicamento</string>
    <string name="screen_edit_profile">Editar perfil</string>
    <string name="date_hint">dd/mm/aaaa</string>
    <string name="dosage_hint">Número de gotas ou comprimidos</string>
    <string name="profile_patient_name">Nome do paciente</string>
    <string name="profile_patient_birthday">Data de nascimento</string>
    <string name="profile_patient_age">Idade</string>
    <string name="profile_patient_edit">Editar</string>
    <string name="profile_patient_conclude">Concluir</string>
    <string name="add_reminder_label_type">Tipo do lembrete</string>
    <string name="add_reminder_spiner_type">Selecionar</string>
    <string name="add_reminder_label_alarm">Tipo do alarme</string>
    <string name="care_skin">Orientações quanto ao cuidado com a pele</string>
    <string name="care_skin_p1">
        Os cuidados com a pele perpassam desde a hidratação que pode ser realiza com cremes, óleos,
        hidratantes ou emolientes, à alimentação rica em proteína, bem como a ingesta hídrica
        adequada que também são fatores de prevenção à lesões na pele. Outras formas de cuidados
        podem ser adotadas, como evitar banhos em água quente, visualizar frequentemente como está
        a pele, reduzir a exposição à umidades com a troca de fraldas frequentes.
    </string>
    <string name="care_skin_p2">
        O rompimento da pele causadas pelo paciente está frequentemente exposto a uma única posição,
        são chamadas lesões pressão, estas podem ser evitadas com a utilização de colchões  casca de
        ovo, d’ água, espumas, mudar o paciente de posição a cada 2 horas, manter a cabeceira do
        leito em um ângulo de 30º, utilizar lençóis de algodão e sempre bem esticados e evitar
        pressão e massagens nas proeminências ósseas. Evitando assim as lesões por pressão.
    </string>
    <string name="care_skin_p3">
        Para iniciar os cuidados com a pele peristomal se faz necessário está atento para os sinais
        de alerta: surgimento de hematomas, perfusão tissular diminuída, risco de sangramentos.
    </string>
    <string name="care_skin_p4">
        Os cuidados com o estoma vem desde a instalação correta da bolsa coletora com o intuito de
        evitar vazamentos, diminuir odores e proteger a pele, podem ser utilizados também cremes que
        servem como barreira de proteção. A higiene da bolsa também é algo essência, esta precisa
        ser retirada sem causar rupturas na pele, a pele necessita ser lavada com sabão neutro e
        água morna, eliminando todos os resíduos, secar bem a pele antes de instalar a nova bolsa,
        assim a pele peristomal estará saudável e integra.
    </string>
    <string name="care_airways">Cuidados com as vias aéreas</string>
    <string name="care_airways_p1">
        Durante a mudança climática é muito comum que as narinas fiquem ressecadas, assim é
        importante realizar a lavagem nasal que proporciona deixar as narinas e a região orofaríngea
        úmidas e limpas, essa ação pode ser realizada com a colocação de 10 ml de soro fisiológico
        em cada narina 01 vez ao dia pela manhã, em locais mais frios a frequência pode ser
        aumentada para mais uma vez a noite. Esta ação previne as infecções respiratórias, como as
        sinusites, faringites e traqueítes. É importante lembrar que manter a boa e língua limpa,
        também previne tais infecções.
    </string>
    <string name="care_airways_p2">
        Há pacientes que utilizam o BI-PAP ou BI-LEVEL que são equipamentos que contém uma máscara
        nasal, oronasal ou facial, esta ventilação não invasiva- VNI são indicadas em alguns casos,
        pode iniciar com 04 horas por dia o que já proporciona um descanso para a musculatura
        respiratória, há pacientes que podem utilizar até por 16 horas, o uso desta evita as
        traqueostomias. Vale ressaltar que os pacientes que utilizam por um tempo mais prolongado,
        o cuidador precisa está atento para a bateria.
    </string>
    <string name="care_airways_p3">
        Nos pacientes que já estão com a traqueostomia, os cuidadores precisam está atentos ao tipo
        de cânula e ao cuff (balonete) para que possa evitar lesões provocadas pela pressão do
        balonete na traqueia. Estes pacientes podem utilizar respirador e precisa está atento para
        a bateria (DORÇA).
    </string>
    <string name="care_airways_p4">
        Os pacientes com Traqueostomia necessitam ser aspirados com a utilização de cateter (sonda)
        iniciando após a introdução na região da traqueia com duração em menos de 15 segundos e para
        retirá-la deve ser realizado movimentos circulares, que permite a limpeza e evita danos a
        mucosa. Esta sonda pode ser utilizada para aspiração nasal e oral e em seguida deve ser
        descartada.
    </string>
    <string name="care_airways_p5">
        Em alguns casos é necessário realizar a fluidificação para poder conseguir aspirar as
        secreções mais espessas, com a utilização de pequena quantidade de soro fisiológico
        (10-20 ml), pode-se também associar com a utilização do ambu.
    </string>
    <string name="care_probe">Cuidados com as sondas enterais</string>
    <string name="care_probe_p1">
        As sondas enterais são de diferentes  tipos,  tamanhos e comprimentos,  pode  ser inserida
        no paciente por várias vias e colocada em diferentes locais do trato gastrointestinal, a
        escolha da  sonda  depende do  tempo  que  o  paciente  precisará utiliza-la.
    </string>
    <string name="care_probe_p2">
        A sonda enteral é utilizada para administração de alimentos e medicamentos em pacientes que
        estão no ambiente hospitalar, ambulatorial ou domiciliar. Os pacientes que as utiliza,
        precisam ser acompanhados a nível ambulatorial,   com a intensão de realizar a   supervisão
        da sonda,   o controle   e   a   qualidade  medicamentos  que é administrada por ela, como
        também para acompanhamento nutricional.
    </string>
    <string name="care_fall_prev">Prevenção de quedas</string>
    <string name="care_fall_prev_p1">
        A prevenção a quedas pode ser realizada com adaptações no domicílio, tais como a inclusão
        de corrimão, alças de apoio, elevação ou rebaixamento das camas, adequações no sanitário
        redimensionando os espaços para uma melhor adaptação do familiar, facilitando assim o
        trabalho do cuidador/familiar.
    </string>
    <string name="care_fall_prev_p2">
        Sabe-se que quando o paciente tem dificuldade de deambulação ou utiliza cadeiras de roda
        e/ou de banho é necessária uma maior atenção nos cuidados de higiene pessoal, bem como
        requer um maior esforço físico do cuidador.
    </string>
    <string name="care_fall_prev_p3">
        Há fatores intrínsecos (do próprio paciente) que predispõe a ocorrência de quedas, como as
        mudanças fisiológicas que são naturais do processo de envelhecimento humano, as alterações
        nos sistemas cardíaco, sensorial, nervoso, muscular e esquelético, dentre estes
        destacando-se as alterações da visão, audição, olfato, marcha, o que implica na coordenação
        motora e no declínio do tempo de reação.
    </string>
    <string name="care_fall_prev_p4">
        O uso de vários medicamentos também requer atenção, pois podem provocar quedas, devido as
        interações medicamentosas e aos efeitos colaterais. Os pacientes que tem déficit visual e
        auditivo tem grande probabilidade de sofrer quedas.
    </string>
    <string name="care_fall_prev_p5">
        Por isso é importante pensar quais são as adaptações que podem ser realizadas no domicílio
        para evitar as quedas nos pacientes com ELA.
    </string>
    <string name="nurcing_prep_med">O preparo do medicamento em pacientes com sonda enteral</string>
    <string name="nurcing_prep_med_p1">
        Os pacientes que usam sonda nasoenteral, cateter gastrostomia ou jejunostomia, a primeira
        opção são medicamentos em solução, caso não seja possível, é indicado a diluição dos
        comprimidos de acordo com a orientação do fabricante. Ao iniciar e finalizar o preparo e
        administração dos medicamentos se faz necessário higienizar as mãos.
    </string>
    <string name="nurcing_prep_med_p2">
        Se o medicamento for líquido em alguns casos é necessário realizar a diluição com o intuito
        de minimizar os efeitos adversos no trato gastrointestinal. Se o medicamento for sólido,
        realizar a trituração até torna-lo pó e diluído em água.
    </string>
    <string name="nurcing_prep_med_p3">
        Posteriormente elevar a cabeceira do leito para administrar a medicação via sonda
        nasoenteral. Caso seja prescrito mais de um medicamento, realizar a diluição separadamente,
        lavar a sonda com 5 a 15 ml de água entre as medicações caso o paciente tenha acabado de se
        alimentar lavar a sonda com 15 a 30 ml de água.
    </string>
    <string name="nurcing_prep_med_p4">
        A administração  de  medicamentos  por  sonda  enteral  é segura, porém é necessário ter
        cuidados ao diluir as medicações, pois interfere na absorção, distribuição, metabolização e
        excreção dos princípios ativos do medicamento, o que pode mudar o efeito do medicamento,
        provocar eventos adversos, ou causar obstrução da sonda, sendo necessário repassar a  mesma.
        Então se o seu paciente utilizar sonda enteral, é importante questionar qual a melhor forma
        de diluição.
    </string>
    <string name="nurcing_first_aid">Primeiros socorros</string>
    <string name="first_aid_p1">
        Durante o engasgo pode o cuidador inicialmente pode levar o seu dedo a boca do paciente com
        ELA e tentar retirar o alimento que provocou o fato, caso não seja efetivo, pode realizar a
        manobra de Heimlich que consiste no cuidador se posicionar atrás do paciente, ambos em pé,
        abraça-lo pelas costas e aperta-lo com os braços próximo acima da cicatriz umbilical com a
        mão fechada e com o polegar para dentro, realizar movimentos rápidos em forma de J 5 vezes.
    </string>
    <string name="first_aid_p2">
        O estímulo à tosse também ajuda a desengasgar, é feita a insuflação do ambu acoplado a
        máscara oronasal e posteriormente é realizado um impulso abdominal (quando se empurra o
        abdômen superior) ao mesmo tempo que a glote se abre. A tosse manualmente assistida é bem
        mais sucedida quando o paciente é cooperativo. A exalação (eliminação do ar) aumenta quando
        se empurra o abdômen superior ou a parede do tórax, estimulando assim a tosse.
    </string>
    <string name="first_aid_p3">
        Assim esse estímulo da tosse contribui para a melhoria da qualidade de vida dos pacientes e
        reduz a mortalidade. Caso essas manobras não sejam efetivas, chamar o Serviço de Atendimento
        médico de Urgência – SAMU, pelo telefone 192.
    </string>
</resources>