<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/ic_menu_reminder"
            android:title="@string/menu_reminders" />
        <item
            android:id="@+id/nav_medicines"
            android:icon="@drawable/ic_menu_medicine"
            android:title="@string/menu_medicine" />
        <item
            android:id="@+id/nav_care"
            android:icon="@drawable/ic_menu_care"
            android:title="@string/menu_care" />
        <item
            android:id="@+id/nav_pathology"
            android:icon="@drawable/ic_menu_pathology"
            android:title="@string/menu_pathology" />
        <item
            android:id="@+id/nav_nurcing"
            android:icon="@drawable/ic_menu_nurcing"
            android:title="@string/menu_nurcing" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/app_name" />

    </group>

</menu>
