<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_care">

    <fragment
            android:id="@+id/nav_profile"
            android:name="com.poli.tulioassis.cuidardela.ui.profile.ProfileFragment"
            android:label="@string/menu_profile"
            tools:layout="@layout/fragment_profile" >
        <action
                android:id="@+id/action_nav_profile_to_nav_profile_edit"
                app:destination="@id/nav_profile_edit" />
    </fragment>
    <activity
            android:id="@+id/nav_profile_edit"
            android:name="com.poli.tulioassis.cuidardela.ui.profile.ProfileActivity"
            android:label="@string/screen_edit_profile"
            tools:layout="@layout/activity_edit_profile" />

    <fragment
            android:id="@+id/nav_care"
            android:name="com.poli.tulioassis.cuidardela.ui.care.CareFragment"
            android:label="@string/menu_care"
            tools:layout="@layout/fragment_care" />

    <fragment
            android:id="@+id/nav_pathology"
            android:name="com.poli.tulioassis.cuidardela.ui.pathology.PathologyFragment"
            android:label="@string/menu_pathology"
            tools:layout="@layout/fragment_pathology" />

    <fragment
            android:id="@+id/nav_nurcing"
            android:name="com.poli.tulioassis.cuidardela.ui.nurcing.NurcingFragment"
            android:label="@string/menu_nurcing"
            tools:layout="@layout/fragment_nurcing" />

    <fragment
            android:id="@+id/nav_about"
            android:name="com.poli.tulioassis.cuidardela.ui.about.AboutFragment"
            android:label="@string/menu_about"
            tools:layout="@layout/fragment_about" />

    <activity
            android:id="@+id/nav_add_medicine"
            android:name="com.poli.tulioassis.cuidardela.AddMedicineActivity"
            android:label="@string/screen_add_medicine"
            tools:layout="@layout/activity_add_medicine" />

</navigation>