<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <!--
            - TEXT DRUG PREPARATION
            -->

            <TextView
                    android:id="@+id/text_nurcing"
                    style="@style/SectionHeader"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/nurcing_prep_med"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/nurcing_prep_med_p1"
                    style="@style/SectionBody"
                    android:layout_below="@+id/text_nurcing"
                    android:text="@string/nurcing_prep_med_p1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/nurcing_prep_med_p2"
                    style="@style/SectionBody"
                    android:layout_below="@+id/nurcing_prep_med_p1"
                    android:text="@string/nurcing_prep_med_p2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/nurcing_prep_med_p3"
                    style="@style/SectionBody"
                    android:layout_below="@+id/nurcing_prep_med_p2"
                    android:text="@string/nurcing_prep_med_p3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/nurcing_prep_med_p4"
                    style="@style/SectionBody"
                    android:layout_below="@+id/nurcing_prep_med_p3"
                    android:text="@string/nurcing_prep_med_p4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            <!--
            - TEXT FIRST AID
            -->

            <TextView
                    android:id="@+id/text_first_aid"
                    style="@style/SectionHeader"
                    android:layout_marginTop="8sp"
                    android:text="@string/nurcing_first_aid"
                    android:layout_below="@+id/nurcing_prep_med_p4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/first_aid_p1"
                    style="@style/SectionBody"
                    android:layout_below="@+id/text_first_aid"
                    android:text="@string/first_aid_p1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/first_aid_p2"
                    style="@style/SectionBody"
                    android:layout_below="@+id/first_aid_p1"
                    android:text="@string/first_aid_p2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/first_aid_p3"
                    style="@style/SectionBody"
                    android:layout_below="@+id/first_aid_p2"
                    android:text="@string/first_aid_p3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            
        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>